remove dark mode for now, there's issue with it

--- a/src/app/style/global.scss
+++ b/src/app/style/global.scss
@@ -1,5 +1,4 @@
 body {
   padding: 0;
   margin: 0;
-  color: rgba(255, 255, 255, 0.85);
 }
