--- a/src/app/style/highlight-link.scss
+++ b/src/app/style/highlight-link.scss
@@ -1,5 +1,6 @@
 .hlink {
-  background: #141414;
+  // background: #141414;
+  background: white;
   padding: 10px;
   border-radius: 10px;
   position: relative;
